samples/_failures_safe/1761418225_a88e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_541155f3.c: In function ‘main’:
./samples/SAFE/__tmp_541155f3.c:146:23: error: expected ‘)’ at end of input
  146 |     kruskal_mst(&graph
      |                ~      ^
      |                       )
./samples/SAFE/__tmp_541155f3.c:146:5: error: expected declaration or statement at end of input
  146 |     kruskal_mst(&graph
      |     ^~~~~~~~~~~
